objects/NPC_Response__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Condition_Rate_Key__c</fullName>
        <description>This holds the concatenated Condition types and Rates coming from SAP</description>
        <label>Condition Rate Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>F_Response_Status__c</fullName>
        <formula>TEXT(NPC_Request__r.Status__c)</formula>
        <label>F Response Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPC_Message_Type__c</fullName>
        <description>EX: W for Warning, E for Error, S for Success - This is returned by BAPI</description>
        <label>NPC Message Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPC_Message__c</fullName>
        <description>Actual Error or Warning Message from the BAPI</description>
        <label>NPC Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPC_Request__c</fullName>
        <label>NPC Request</label>
        <referenceTo>NPC_Request__c</referenceTo>
        <relationshipLabel>NPC Response</relationshipLabel>
        <relationshipName>NPC_Response</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NPC_Response_Status__c</fullName>
        <label>NPC Response Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NPC Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>F_Response_Status__c</columns>
        <columns>Material_Number__c</columns>
        <columns>NPC_Response_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPC_Message_Type__c</field>
            <operation>equals</operation>
            <value>E</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPC Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>